update make file

--- a/user_manage/Makefile
+++ b/user_manage/Makefile
@@ -4,6 +4,8 @@ export
 MIGRATE_PATH=internal/db/migrations
 # CONN_STR=postgres://$(DB_USER):$(DB_PASSWORD)@$(DB_HOST):$(DB_PORT)/$(DB_NAME)?sslmode=disable
 CONN_STR=$(DATABASE_URL)
+ENV_FILE = .env
+COMPOSE = docker-compose.yml
 sqlc:
 	sqlc generate
 
@@ -38,5 +40,11 @@ migrate-go:
 
 make server:
 	air
-
-.PHONY: importdb exportdb migrate-create migrate-up migrate-down migrate-force migrate-drop migrate-go sqlc server
+prod:
+	docker-compose -f $(COMPOSE) down
+	docker-compose -f $(COMPOSE) up -env-file $(ENV_FILE) up -d --build
+logs-prod:
+	docker-compose -f $(COMPOSE) logs -f --tail 100
+bash:
+  docker exec -it golang_api /bin/sh
+.PHONY: importdb exportdb migrate-create migrate-up migrate-down migrate-force migrate-drop migrate-go sqlc server prod logs-prod bash	
